@@ -5,6 +5,7 @@ usr/share/php/openmediavault
 var/lib/openmediavault
 var/lib/openmediavault/apt
 var/lib/openmediavault/cron.d
+var/lib/openmediavault/ssh/authorized_keys
 var/www/openmediavault
 var/cache/openmediavault
 var/cache/openmediavault/archives
